# redliner

./: .pre-commit-config.yaml  README.md  pyproject.toml
docs/superpowers/plans/: 2026-04-02-diff-review.md
docs/superpowers/specs/: 2026-04-02-diff-review-design.md
src/compose_review/: __main__.py  cli.py  diff.py  review.py  web.py
src/redliner/: __main__.py  cli.py  diff.py  review.py  web.py
tests/compose_review/: conftest.py  test_cli_diff.py  test_diff.py
tests/redliner/: conftest.py  test_cli_diff.py  test_diff.py  test_review.py  test_web.py
