[project]
name = "compose-review"
version = "0.1.0"
description = "PR-like review tool for plan files"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "Pedro Figueiredo" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Repository = "https://github.com/PFigs/plan-review-tool"

[project.scripts]
compose-review = "compose_review.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/compose_review"]
