[project]
name = "redliner"
dynamic = ["version"]
description = "Review tool for plans and code diffs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "Pedro Figueiredo" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Repository = "https://github.com/PFigs/redliner"

[project.scripts]
redliner = "redliner.cli:main"

[project.optional-dependencies]
dev = [
    "pre-commit>=4.0,<5",
    "pytest>=8.0,<9",
    "ruff>=0.9,<1",
    "pyright>=1.1,<2",
]

[build-system]
requires = ["hatchling==1.27.0", "hatch-vcs>=0.4,<1"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/redliner"]

[tool.ruff]
target-version = "py312"
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"src/redliner/web.py" = ["E501"]

[tool.pyright]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
